--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ jobs:
   include:
     - stage: coditsu
       language: ruby
+      rvm: 2.6.5
       before_install:
         - gem update --system
         - gem install bundler
