change diffend keys to shareable_id and shareable_key

--- a/.diffend.yml
+++ b/.diffend.yml
@@ -1,3 +1,3 @@
 project_id: 'd19af75c-1296-45bd-950f-3072b0134497'
-api_key: 'a3e1f41a-0595-4278-8562-df664b7398d5'
-api_secret: 'f9beda3f-70de-4258-8ca0-60298407b614'
+shareable_id: '0bddcda8-7b70-4bf4-aa80-8bbc3b16106a'
+shareable_key: '6d808641-cde2-49c6-9fc3-fbc2fc86a733'
