--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   specs:
     runs-on: ubuntu-latest
+    needs: diffend
     strategy:
       fail-fast: false
       matrix:
@@ -33,6 +34,26 @@ jobs:
       - name: Bundle install
         run: |
           bundle install --jobs 4 --retry 3
+
+  diffend:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.0
+      - name: Install latest bundler
+        run: gem install bundler --no-document
+      - name: Install Diffend plugin
+        run: bundle plugin install diffend
+      - name: Bundle Secure
+        run: bundle secure
+
   coditsu:
     runs-on: ubuntu-latest
     strategy:
