--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,18 @@ jobs:
       - name: Run Coditsu
         run: ./coditsu_script.sh
 
+  yard-lint:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@d5126b9b3579e429dd52e51e68624dda2e05be25 # v1.267.0
+        with:
+          ruby-version: '3.4'
+          bundler-cache: true
+      - run: bundle exec yard-lint lib/
+
   ci-success:
     name: CI Success
     runs-on: ubuntu-latest
@@ -86,6 +98,7 @@ jobs:
     needs:
       - coditsu
       - specs
+      - yard-lint
     steps:
       - name: Check all jobs passed
         if: |
