--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,11 @@ jobs:
         run: |
           bundle install --jobs 4 --retry 3
 
+      - name: Run all tests
+        env:
+          GITHUB_COVERAGE: ${{matrix.coverage}}
+        run: bundle exec rspec
+
   coditsu:
     timeout-minutes: 5
     runs-on: ubuntu-latest
