--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,7 +93,9 @@ jobs:
         uses: ruby/setup-ruby@80740b3b13bf9857e28854481ca95a84e78a2bdf # v1.284.0
         with:
           ruby-version: '4.0'
-          bundler-cache: true
+          bundler-cache: false
+      - name: Bundle install
+        run: bundle install --jobs 4 --retry 3
       - run: bundle exec yard-lint lib/
 
   ci-success:
