use 4.0 for yard-lint (#337)
* use 4.0 for yard-lint

* Disable bundler cache for yard-lint to fix Ruby 4.0 upgrade

The bundler cache from Ruby 3.4 was causing conflicts with Ruby 4.0.
Disabling cache to force fresh bundle install.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,9 +92,10 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@80740b3b13bf9857e28854481ca95a84e78a2bdf # v1.284.0
         with:
-          # Using 3.4 until ffi gem supports Ruby 4.0
-          ruby-version: '3.4'
-          bundler-cache: true
+          ruby-version: '4.0'
+          bundler-cache: false
+      - name: Bundle install
+        run: bundle install --jobs 4 --retry 3
       - run: bundle exec yard-lint lib/
 
   ci-success:
