Re-enable bundler cache for yard-lint job
Now that Ruby 4.0 is working, re-enable bundler cache to improve
CI performance.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,9 +93,7 @@ jobs:
         uses: ruby/setup-ruby@80740b3b13bf9857e28854481ca95a84e78a2bdf # v1.284.0
         with:
           ruby-version: '4.0'
-          bundler-cache: false
-      - name: Bundle install
-        run: bundle install --jobs 4 --retry 3
+          bundler-cache: true
       - run: bundle exec yard-lint lib/
 
   ci-success:
