--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,7 @@ jobs:
         with:
           ruby-version: '4.0'
           bundler-cache: true
+          cache-version: 1
       - run: bundle exec yard-lint lib/
 
   ci-success:
