Add lostconf to CI and fix config issues
- Add lostconf job to CI workflow to detect stale config patterns
- Fix .yard-lint.yml: update .git exclusion pattern to .git/**/*
- Fix .yard-lint.yml: remove non-existent test/**/* pattern
- Add lostconf to ci-success job dependencies

--- a/.yard-lint.yml
+++ b/.yard-lint.yml
@@ -7,11 +7,10 @@ AllValidators:
   - "--private"
   - "--protected"
   Exclude:
-  - "\\.git"
+  - .git/**/*
   - vendor/**/*
   - node_modules/**/*
   - spec/**/*
-  - test/**/*
   FailOnSeverity: convention
   MinCoverage: 99.0
   DiffMode:
