Add lostconf to CI and fix config issues (#343)
* Add lostconf to CI and fix config issues

- Add lostconf job to CI workflow to detect stale config patterns
- Fix .yard-lint.yml: update .git exclusion pattern to .git/**/*
- Fix .yard-lint.yml: remove non-existent test/**/* pattern
- Add lostconf to ci-success job dependencies

* Pin lostconf dependency with package.json

- Add package.json with lostconf@0.4.0 pinned
- Add package-lock.json for security and reproducibility
- Update renovate.json to include package.json in monitoring
- Update CI to use npm ci instead of npx to respect lock file
- This ensures 7-day cooldown policy and prevents unexpected updates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,23 @@ jobs:
           bundler-cache: true
       - run: bundle exec yard-lint lib/
 
+  lostconf:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          fetch-depth: 0
+      - name: Set up Node.js
+        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4.1.0
+        with:
+          node-version: '20'
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm ci
+      - name: Run lostconf
+        run: npx lostconf --fail-on-stale
+
   ci-success:
     name: CI Success
     runs-on: ubuntu-latest
@@ -96,6 +113,7 @@ jobs:
       - rubocop
       - specs
       - yard-lint
+      - lostconf
     steps:
       - name: Check all jobs passed
         if: |
