--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,7 @@
   ],
   "minimumReleaseAge": "7 days",
   "includePaths": [
+    ".ruby-version",
     "Gemfile",
     "Gemfile.lint",
     "package.json",
