--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -34,7 +34,12 @@ Layout/LineLength:
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: space
 
-# RSpec
+# RSpec – only applies to spec/ (RSpec integration tests that remain)
+RSpec:
+  Include:
+    - "spec/**/*_spec.rb"
+    - "spec/**/*_helper.rb"
+
 RSpec/ExampleLength:
   Enabled: false
 
