--- a/.yard-lint.yml
+++ b/.yard-lint.yml
@@ -11,6 +11,7 @@ AllValidators:
   - vendor/**/*
   - node_modules/**/*
   - spec/**/*
+  - test/**/*
   FailOnSeverity: convention
   MinCoverage: 99.0
   DiffMode:
