Migrate gem test suite from RSpec to Minitest (#355)
* Migrate gem test suite from RSpec to Minitest

Move the gem's own test suite to Minitest, aligning with the Karafka
ecosystem convention (karafka-core already migrated via PR #311).

The RSpec integration tests remain under spec/integration/rspec/ as
they exercise the RSpec helpers and require RSpec to function. They
become a separate CI job (rspec-integration).

- Add test/ directory with Minitest equivalents of all 11 unit specs
- Move minitest integration tests from spec/ to test/
- Add Rake::TestTask with :test and test:integration tasks
- Update CI: tests job runs rake, rspec-integration runs RSpec specs
- Scope RSpec rubocop cops to spec/ only
- Delete .rspec and migrated spec files

* Fix line length violation in helpers_test.rb

* Add rubocop-minitest, remove unneeded RSpec cops, use -r test_helper

- Add rubocop-minitest and standard-minitest to Gemfile.lint
- Remove RSpec cops no longer needed (IndexedLet, MultipleMemoizedHelpers,
  NestedGroups, NoExpectationExample, SpecFilePathFormat, VerifiedDoubles)
- Keep only RSpec cops still triggered by remaining integration specs
- Add Minitest/MultipleAssertions: Enabled: false
- Fix Minitest/EmptyLineBeforeAssertionMethods offenses
- Use -r test_helper in Rakefile instead of per-file requires

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,7 @@
 plugins:
   - rubocop-capybara
   - rubocop-factory_bot
+  - rubocop-minitest
   - rubocop-performance
   - rubocop-rspec
   - rubocop-rspec_rails
@@ -11,6 +12,7 @@ plugins:
 inherit_gem:
   standard: config/base.yml
   standard-performance: config/base.yml
+  standard-minitest: config/base.yml
   standard-rspec: config/base.yml
 
 AllCops:
@@ -34,32 +36,23 @@ Layout/LineLength:
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: space
 
-# RSpec
-RSpec/ExampleLength:
+# Minitest
+Minitest/MultipleAssertions:
   Enabled: false
 
-RSpec/IndexedLet:
-  Enabled: false
-
-RSpec/MultipleExpectations:
-  Enabled: false
-
-RSpec/MultipleMemoizedHelpers:
-  Max: 20
-
-RSpec/NestedGroups:
-  Max: 4
-
-RSpec/NoExpectationExample:
-  Enabled: false
-
-RSpec/SpecFilePathFormat:
-  Enabled: false
+# RSpec – only applies to spec/ (RSpec integration tests that remain)
+RSpec:
+  Include:
+    - "spec/**/*_spec.rb"
+    - "spec/**/*_helper.rb"
 
 RSpec/DescribeClass:
   Enabled: false
 
-RSpec/VerifiedDoubles:
+RSpec/ExampleLength:
+  Enabled: false
+
+RSpec/MultipleExpectations:
   Enabled: false
 
 # ThreadSafety
